// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components::StatusButton::StatusButton mounts with default props 1`] = `
<StatusButton__MenuButtonStyle
  anchor={
    Object {
      "x": "inner right",
      "y": "overlap",
    }
  }
  color="$md-orange-500"
  disabled={false}
  flat={true}
  icon={false}
  iconBefore={false}
  iconChildren="expand_more"
  id="container-actions-menu"
  inkDisabled={false}
  listHeightRestricted={false}
  menuItems={Array []}
  position="tr"
  primary={false}
  repositionOnScroll={false}
  simplifiedMenu={false}
>
  PENDING
</StatusButton__MenuButtonStyle>
`;

exports[`Components::StatusButton::StatusButton renders correctly when a status is passed 1`] = `
<StatusButton__MenuButtonStyle
  anchor={
    Object {
      "x": "inner right",
      "y": "overlap",
    }
  }
  color="$md-blue-grey-400"
  disabled={false}
  flat={true}
  icon={false}
  iconBefore={false}
  iconChildren="expand_more"
  id="container-actions-menu"
  inkDisabled={false}
  listHeightRestricted={false}
  menuItems={Array []}
  position="tr"
  primary={false}
  repositionOnScroll={false}
  simplifiedMenu={false}
>
  running
</StatusButton__MenuButtonStyle>
`;

exports[`Components::StatusButton::StatusButton renders correctly when the button has inMenu passed 1`] = `
<StatusButton__MenuButtonStyle
  anchor={
    Object {
      "x": "inner left",
      "y": "overlap",
    }
  }
  color={null}
  disabled={false}
  flat={false}
  icon={true}
  iconBefore={true}
  iconChildren="more_vert"
  id="container-actions-menu"
  inkDisabled={true}
  listHeightRestricted={false}
  menuItems={Array []}
  position="tl"
  primary={true}
  repositionOnScroll={false}
  simplifiedMenu={false}
/>
`;
